fixes strange layout bug in restriction section that appears only in chrome

--- a/package/gargoyle/files/www/themes/default/internal.css
+++ b/package/gargoyle/files/www/themes/default/internal.css
@@ -91,6 +91,7 @@ fieldset label
 {
 	display:block;
 	float:left;
+	clear:left;
 	width:200px;
 	margin-left:5px;
 	margin-right:5px;
@@ -121,6 +122,7 @@ fieldset label
 {
 	display:block;
 	float:left;
+	clear:left;
 	width:125px;
 	margin-left:5px;
 	margin-right:5px;
